@@ -1,4 +1,4 @@
-Lingua-AR-Word version 1.3
+Lingua-AR-Word version 1.51
 ======================
 
 This is a dictionary from Arabic to another language:
